# arg-needle-lib

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  PyPI_README.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  check-version.py  deploy-public.yml  qa-checks.yml  sync.yml  tests-examples-macos.yml  tests-examples-ubuntu.yml  tests-python.yml
arg_needle_lib/: CMakeLists.txt  ancestor_entry.cpp  arg_edge.cpp  arg_node.cpp  arg_utils.hpp  descendant_list.hpp  file_utils.hpp  metrics.py  mutation.cpp  root.cpp  root.hpp  site.hpp  types.hpp  utils.cpp
cmake/: CompilerWarnings.cmake  ProjectSettings.cmake  Sanitisers.cmake  StaticAnalysers.cmake
docs/: conf.py  modules.rst
docs/source/: conf.py  index.rst
example/: CMakeLists.txt  example_arg.cpp  example_async.py  example_grm.py  example_mutation.cpp  example_mutation.py  example_node.cpp  example_sumstats.cpp  example_visit.cpp  utils.py
example/arg_mlma/: README.md  Snakefile
example/arg_mlma/scripts/: Harrell_Davis.py  association.py  form_plink_residual.py  invert_calibration_factor.py  null_model.py  prepare_association_example.py
src/: CMakeLists.txt  IntervalTree.h  __init__.py  ancestor_entry.cpp  ancestor_entry.hpp  arg.cpp  arg.hpp  arg_edge.cpp  arg_edge.hpp  arg_needle_lib_pybind.cpp  arg_node.cpp  arg_node.hpp  arg_traversal.hpp  arg_utils.cpp  arg_utils.hpp  constants.cpp  constants.hpp  constants.py  convert.py  descendant_list.cpp  descendant_list.hpp  deserialization_params.hpp  file_utils.cpp  file_utils.hpp  genotype_mapping.cpp  genotype_mapping.hpp  grm.py  metrics.py  mutation.cpp  mutation.hpp  random_utils.cpp  random_utils.hpp  root.cpp  root.hpp  serialize_arg.cpp  serialize_arg.hpp  serialize_arg.py  site.cpp  site.hpp  types.hpp  (+2 more)
src/arg_needle_lib/: __init__.py  constants.py  convert.py
src/arg_needle_lib/scripts/: __init__.py  association.py  convert.py
src/scripts/: __init__.py  association.py  convert.py  prepare_association_example.py
test/: CMakeLists.txt  test_aDNA.py  test_arg.cpp  test_arg.py  test_arg_trimming.py  test_arg_utils.cpp  test_arg_utils.py  test_big_args.py  test_constants.py  test_convert.py  test_genotype_mapping.py  test_matmul.py  test_metrics.py  test_mutation.cpp  test_serialize_arg.cpp  test_serialize_arg.py  test_simple.cpp  test_structure.cpp  test_threading.cpp  tree_metrics.py
testdata/length_1e6_samples_1e3/: edges.txt  nodes.txt
testdata/length_5e3_samples_2e3/: edges.txt  nodes.txt
testdata/length_5e3_samples_5e1/: edges.txt  nodes.txt
testdata/length_5e4_samples_2e4/: edges.txt  nodes.txt
testdata/test_serialize_arg/: valid.arg  valid_hdf5_invalid_arg  valid_with_mutations.arg
testdata/tsinfer_snp_length_5e6_samples_3e2/: 1.trees
