[build-system]
requires = ["scikit-build-core>=0.10.5", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["readme"]
name = "arg-needle-lib"
version = "1.2.2" # FIXME do not merge to main
description = "Ancestral recombination graph (ARG) data structure and operations"
authors = [
    { name = "ARG-Needle Developers" }
]
requires-python = ">=3.9"

dependencies = [
    'click',
    'h5py',
    'msprime>=1.3.0',
    'pandas',
    'scipy',
    'tskit>=0.5.8',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tszip>=0.2.5",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
arg_association="arg_needle_lib.scripts.association:main"
arg_association_prepare_example="arg_needle_lib.scripts.prepare_association_example:main"
arg2tskit="arg_needle_lib.scripts.convert:arg2tskit"
tskit2arg="arg_needle_lib.scripts.convert:tskit2arg"

[tool.scikit-build]
cmake.args = [
    "-DPYTHON_BINDINGS=ON",
    "-DWARNINGS_AS_ERRORS=OFF",
    "-DENABLE_TESTING=OFF",
]
build.verbose = true
cmake.build-type = "Release"

metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "PyPI_README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "RELEASE_NOTES.md"
